[gd_scene load_steps=2 format=3 uid="uid://cjfyyvlm1s5e5"]

[ext_resource type="Script" path="res://shared/settings_menu/settings_toggle/settings_toggle.gd" id="1_jpg2i"]

[node name="SettingsToggle" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
offset_right = 114.0
offset_bottom = 31.0
script = ExtResource("1_jpg2i")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5

[node name="LeftLabel" type="Label" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Label"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OnButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "On"

[node name="Border" type="Panel" parent="HBoxContainer/HBoxContainer/OnButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OffButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Off"

[node name="Border" type="Panel" parent="HBoxContainer/HBoxContainer/OffButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
